--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-    <title>Document</title>
+    <title>MSPclub</title>
     </head>
     <body>
     <nav>
@@ -91,8 +91,7 @@
                 <div class="stat-sec">
                     <h3>Make Your Ideas <br>Cometo Life with US</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum molestias, non enim consectetur harum ut totam cumque tenetur quasi quo.</p>
-                    <button>Start Now ></button>
-<!--                     <a href="\MSP-session3-task\page2.html" class="button">Start Now</a> -->
+                    <a href="\MSP-session3-task\page2.html" class="button">Start Now</a>
                 </div>
             </div>
         </div>
