--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="stat-sec">
                     <h3>Make Your Ideas <br>Cometo Life with US</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum molestias, non enim consectetur harum ut totam cumque tenetur quasi quo.</p>
-                    <a href="\MSP-session3-task\page2.html" class="button">Start Now</a>
+                    <a href="./page2" class="button">Start Now</a>
                 </div>
             </div>
         </div>
